# Trippy-ball

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  PREVENTIVE_MEASURES.md  PROGRESS.md  README.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_DESIGN.md  run.sh
.github/workflows/: ci.yml  scientific-nightly.yml
docs/: README.md  scientific_contract.md
scripts/scientific/: open_or_update_issue.sh  report.sh
src/: benchmark.rs  lib.rs  main.rs  telemetry.rs
src/math/: kernel_tables.rs  mod.rs  presets.rs  radial.rs  spherical.rs
src/memory/: pod.rs
src/render/: auto_tone.rs  buffer_pool.rs  camera.rs  color.rs  gpu_wavefunction.rs  mod.rs  points.rs
src/render_metal/: context.rs  metal_painter.rs  mod.rs  ring_buffer.rs  surface.rs
src/render_metal/shaders/: cull.metal  egui.metal  point.metal  wavefunction.metal
src/sim/: data_layout.rs  mod.rs  scheduler.rs
src/ui/: controls.rs  input_bridge.rs  mod.rs
tests/: scientific_cpu_invariants.rs  scientific_docs_consistency.rs  scientific_gpu_parity_nightly.rs  scientific_gpu_parity_pr.rs
tests/scientific/: fixtures.rs  mod.rs  reference.rs  tolerances.rs
