[package]
name = "wavefunction-visualization"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A real-time 3D visualization of quantum wavefunctions using spherical harmonics"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["app"]
app = [
    "dep:winit",
    "dep:egui",
]

[dependencies]
# Window creation and event handling
winit = { version = "0.28", optional = true }

# Math libraries
glam = "0.24"  # Fast vector math

# GUI for sliders and controls
egui = { version = "0.22", optional = true }

# Parallel computation
rayon = "1.7"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
core-graphics-types = "0.1"

[dev-dependencies]
num-complex = "0.4"
statrs = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true  # Keep debug symbols for profiling

[profile.dev]
opt-level = 1  # Basic optimizations for better performance during development

[profile.dev.package."*"]
opt-level = 3  # Full optimization for dependencies

[[bin]]
name = "wavefunction-visualization"
path = "src/main.rs"
required-features = ["app"]
